@@ -5,7 +5,7 @@ perldir = @PERLPATH@/EBox/Mail/Model
 
 
 nobase_perl_DATA= SMTPAuth.pm SMTPOptions.pm RetrievalServices.pm \
-	ObjectPolicy.pm VDomains.pm ExternalFilter.pm \
+	ObjectPolicy.pm VDomains.pm VDomainAliases.pm ExternalFilter.pm \
 	GreylistConfiguration.pm
 
 EXTRA_DIST = $(nobase_perl_DATA)
